Bug 13903 - Hibernation failure on dual core Athlon 64 (64-bit)
Summary: Hibernation failure on dual core Athlon 64 (64-bit)
Status: CLOSED CODE_FIX
Alias: None
Product: Power Management
Classification: Unclassified
Component: cpufreq (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: cpufreq
URL:
Keywords:
Depends on:
Blocks: 7216 13615
  Show dependency tree
 
Reported: 2009-08-03 20:48 UTC by Rafael J. Wysocki
Modified: 2009-08-05 11:38 UTC (History)
0 users

See Also:
Kernel Version: 2.6.31-rc2
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
dmesg output from the affected machine (41.73 KB, text/plain)
2009-08-03 20:48 UTC, Rafael J. Wysocki
Details

Description Rafael J. Wysocki 2009-08-03 20:48:51 UTC
Created attachment 22595 [details]
dmesg output from the affected machine

My test machine based on Athlon 64 X2 3800+ and a NVidia chipset suffers from hibernation regression where the second attempt to hibernate in a row hangs it right before the creation of the image.

Since the issue is 100% reproducible, I was able to bisect it and that turned up the following commit:

commit 3f4a782b5ce2698b1870b5a7b573cd721d4fce33
Author: Mathieu Desnoyers <mathieu.desnoyers@polymtl.ca>
Date:   Fri Jul 3 11:25:16 2009 -0400

    [CPUFREQ] fix (utter) cpufreq_add_dev mess

    OK, I've tried to clean it up the best I could, but please test this with
    concurrent cpu hotplug and cpufreq add/remove in loops. I'm sure we will make
    other interesting findings.

    This is step one of fixing the overall locking dependency mess in cpufreq.

    Signed-off-by: Dave Jones <davej@redhat.com>

First-Bad-Commit : 3f4a782b5ce2698b1870b5a7b573cd721d4fce33

Note You need to log in before you can comment on or make changes to this bug.